--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^6.1.0",
     "@mui/material": "^6.1.0",
     "fs": "^0.0.1-security",
+    "mongoose": "^8.18.2",
     "next": "^14.2.32",
     "react": "^18",
     "react-dom": "^18",
